linked style.css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   
   <div id="main" class="color"> 
    <head> 
+     <link rel="stylesheet" type="text/css" href="style.css">
  <meta charset="UTF-8">
      <div class="custo">
    <h1 id="title">Dr. Norman Borlaug</h1>
